<resources>
    <string name="app_name">EnergyHackAPp</string>
    <string name="action_settings">Settings</string>
    <string name="text_upload">MY TICKETS</string>
    <string name="text_userDetails">MY INFORMATION</string>
    <string name="text_scan">Scan</string>
    <string name="text_scanTickets"><![CDATA[Scan & Upload]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_send">Send</string>
    <string name="text_up">Upload</string>
    <string name="text_account">Account</string>
    <string name="text_upload_tickets">Tickets</string>
    <string name="text_family">Add Member</string>
    <string name="text_my">About</string>
    <string name="text_hintFeedback">feedback are most welcome</string>
    <string name="text_toobar_title">Send Feedback</string>
    <string name="text_about">About</string>
    <string name="text_home">Home</string>
    <string name="text_choose_language">Choose Language</string>
    <string name="text_feedback_menu">Send Feedback</string>
    <string name="text_fags_menu">FAGs</string>
    <string name="text_reminder_menu">Reminder</string>
    <string name="text_history_menu">History</string>
    <string name="text_about_menu">About Us</string>
    <string name="text_logout_menu">Log Out</string>
    <string name="text_aboutAPp">
        Travel and Track App is an initiative by Android club of SOE to enable fast, secure, reliable and pollution free city and hence will be creating pollution-free India  by promoting public transport among citizens of India.
        "\n"
        "\n"

You can upload traveling tickets of bus and train on this App and at end of the month, your account will be ready with a promo code with an exciting amount.
You Can use this promo code to pay the electric bill, water bill, gas bill and many more...
        "\n"
        "\n"

Never share your family code to other...
        "\n"

Call center number 91-8075748697
    </string>
    <string name="text_alramDialog">Set Alarm...</string>
    <string name="text_createAccount">Create  Account</string>
    <string name="text_headOfFamily">Full Name Of family Owner</string>
    <string name="text_name">Name</string>
    <string name="text_adharcard">Aadharcard</string>
    <string name="text_address">Residential Address</string>
    <string name="text_pinCode">Pincode</string>
    <string name="text_email">Email</string>
    <string name="text_familyNumber">No. member whose age is above 10</string>
    <string name="text_city">City :</string>
    <string name="text_enterCity">Select City</string>
    <string name="text_state">State :</string>
    <string name="text_enterState">Select State</string>
    <string name="text_phone">Amount Pay</string>
    <string name="text_signUpButton">Sign Up</string>
    <string name="login_title">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_remember">Remember me</string>
    <string name="text_forgotPassword">Forgot password</string>
    <string name="text_age">Age</string>
    <string name="text_employed">Employed</string>
    <string name="text_yes_no">Yes / No</string>
    <string name="text_relation">Relation With App Owner</string>
    <string name="text_member_title">New Member</string>
    <string name="text_account_title">My  Account</string>
    <string name="text_ownerName">Owner Name</string>
    <string name="text_owner_email">Owner email</string>
    <string name="text_owner_phone">Owner Phone Number</string>
    <string name="text_owner_displayName">Display Name</string>
    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="text_aadhar">Aadhar</string>
    <string name="text_Repassword">Re Enter Password</string>
    <string name="text_showFamily">Show Family Member</string>
    <string name="text_destination">Destination..</string>
    <string name="text_saved">Save</string>
    <string name="text_date_ofJourney">Date of Journey</string>
    <string name="family_name">Name of Family Member</string>
    <string name="family_email">Email of Member</string>
    <string name="family_aadhar">Aadhar of Member</string>
    <string name="family_phone">Contact of Member</string>
    <string name="family_relation">Relation  with Owner</string>
    <string name="text_phoneNumber">Phone Number</string>
    <string name="text_member_phone">Phone Number</string>
    <string name="text_rule">Rule</string>
    <string name="text_Aboutrule">
        \u2022 After  creating account, you are the owner of this  App "\n" "\n"
           \u2022 Add All the family member using button "Add Member".
        You can  see  your  added member  in Account  section"\n" "\n"
           \u2022To Upload the tickets, you have two choices either scan and
             upload  or  upload  by filling  necessary detail  on Clicking the Upload button"\n" "\n"
           \u2022 To see the tickets uploaded go  to Tickets  section  of the Homepage"\n" "\n"
           \u2022 Generated  Promo code  will  also appear in  Tickets Section"\n" "\n"
    </string>
    <string name="acount_title">Back</string>
    <string name="account_hint1">srahulkumar</string>
    <string name="account_email">srahulkumar633@gmail.com</string>
    <string name="account_phone">91-8075748597</string>
    <string name="member_button">Submit</string>
    <string name="add_title">Greeting...</string>
    <string name="add_subtitle">Got The New Tickets</string>
    <string name="add_subtitle2">Add To The Cart</string>
    <string name="add_subtitle3">Tickets No..</string>
    <string name="add_tickets">enter tickets no. here...</string>
    <string name="add_validate">Check Validation</string>
    <string name="add_name">Passenger Name</string>
    <string name="add_bording">Boarding place</string>
    <string name="add_destination">Destination</string>
    <string name="add_phone">Amount pay</string>
    <string name="login_rahul">designed by rahul</string>
    <string name="tickets_title">Uploaded Tickets</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Who\'s Responsible ?</string>

</resources>
