<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bungee_shade"
                android:gravity="center_horizontal"
                android:text="@string/text_createAccount"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/signUp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_name"
                android:inputType="text"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <EditText
                android:id="@+id/signUp_aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_name"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_adharcard"
                android:inputType="number"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <EditText
                android:id="@+id/signUp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_aadhar"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <EditText
                android:id="@+id/signUp_passWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_email"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_password"
                android:inputType="textWebPassword"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e"

                />

            <EditText
                android:id="@+id/signUp_RepassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_passWord"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_Repassword"
                android:inputType="textWebPassword"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_RepassWord"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_state"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/signUp_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/userpass_stroke"
                    android:hint="@string/text_enterState"
                    android:padding="10dp"
                    android:singleLine="true"
                    />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_city"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/signUp_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/userpass_stroke"
                    android:hint="@string/text_enterCity"
                    android:padding="10dp"
                    android:singleLine="true"/>


            </LinearLayout>


            <EditText
                android:id="@+id/signUp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout2"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_phoneNumber"
                android:inputType="phone"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <EditText
                android:id="@+id/signUp_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_phone"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/userpass_stroke"
                android:hint="@string/text_address"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="#0a5b1e" />

            <Button
                android:id="@+id/signUp_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signUp_address"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_bg"
                android:padding="10dp"
                android:text="@string/text_signUpButton"
                android:textColor="#ffffff" />
        </RelativeLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>