<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AccountActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/owner_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/cardview_dark_background"
        app:title="@string/acount_title"
        app:titleTextColor="#ffffff"
        app:titleMarginStart="10dp"
        >

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/text_account_title"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#c4391a"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp">
          <ImageView
              android:id="@+id/owner_image"
              android:layout_width="100dp"
              android:layout_height="match_parent"
              android:background="@drawable/ic_launcher_background"
              />
        <TextView
            android:id="@+id/about_OwnerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/text_ownerName"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/owner_image"
            android:layout_marginLeft="3dp"
            android:textSize="25dp"
            android:fontFamily="serif-monospace"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/image1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/username"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"

            android:layout_toRightOf="@+id/image1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_owner_displayName"
                android:textSize="17dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/about_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/account_hint1"
                android:drawableRight="@drawable/ic_mode_edit_black_24dp"

                />
        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="80dp">
      <ImageView
          android:id="@+id/image2"
          android:layout_width="30dp"
          android:layout_height="match_parent"
          android:src="@drawable/ic_email_black_24dp"
          android:layout_centerVertical="true"
          />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginLeft="10dp"
          android:layout_toRightOf="@+id/image2"
          android:layout_centerVertical="true"
          >
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/text_owner_email"
              android:textSize="17dp"
              android:layout_weight="1"
              />
          <TextView
              android:id="@+id/about_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
               android:hint="@string/account_email"
              android:drawableRight="@drawable/ic_mode_edit_black_24dp"

              />
      </LinearLayout>


  </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <ImageView
            android:id="@+id/image3"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/image3"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_owner_phone"
                android:textSize="17dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/about_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/account_phone"
                android:drawableRight="@drawable/ic_mode_edit_black_24dp"

                />
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/showFamily_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:padding="15dp"
        android:text="@string/text_showFamily"
        android:textColor="#ffffff"
        android:textSize="18dp" />



</LinearLayout>