<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardBackgroundColor="#1c177e"
              app:cardCornerRadius="10dp"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="5dp"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="10dp"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

                <TextView

                    android:id="@+id/family_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/family_member_bg"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/family_name"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/family_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/family_member_bg"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/family_email"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/family_aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/family_member_bg"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/family_aadhar"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/family_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/family_member_bg"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/family_phone"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/family_relation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/family_member_bg"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/family_relation"
                    android:padding="10dp"
                    android:textSize="18dp"

                    android:textStyle="bold" />

            </LinearLayout>

       </android.support.v7.widget.CardView>
</LinearLayout>